# c_thing

./: .gitignore  CMakeLists.txt  HelloWorld.cpp  README.md  my_ext.cpp  pyproject.toml
Hello/: CMakeLists.txt  Speaker.cpp  Speaker.h  hello.cpp
hello_client/: client.py
python/: hello_test.py
tests/: hello_client_test.py
